--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
         
       - uses: actions/checkout@main
         with:
-          name: pydantic/pydantic
+          repository: pydantic/pydantic
           # ref: refs/heads/release
           ref: ${{ steps.get-req-tag.outputs.tag }}
 
