--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -63,6 +63,9 @@ jobs:
         with:
           args: zip -qq -r ${{ steps.get-req-tag.outputs.tag }}.zip required-docs-build
 
+      - name: check files
+        run: ls -l
+
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "${{ steps.get-req-tag.outputs.tag }}.zip"
