--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Get required tag
         id: get-req-tag
-        run: echo tag=$(cat tag) >> "$GITHUB_OUTPUT"
+        run: echo tag=$(cat pydantic-tag) >> "$GITHUB_OUTPUT"
         
       - uses: actions/checkout@main
         with:
